--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
@@ -19,7 +19,7 @@ d<!DOCTYPE html>
     />
     <link rel=“preconnect” href=“https://fonts.gstatic.com”>
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>HW-5</title>
+    <title>HW-6</title>
   </head>
 
   <body>
@@ -47,12 +47,16 @@ d<!DOCTYPE html>
           <li class="nav-contacts-item">
             <a class="nav-contacts-link" href="mailto:info@devstudio.com">
               <svg class="nav-icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+                <use href="./images/sprite.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="nav-contacts-item">
             <a class="nav-contacts-link" href="tel:info@devstudio.com">
               <svg class="nav-icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -125,7 +129,7 @@ d<!DOCTYPE html>
       <div class="container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work">
-          <li class="work-item thumb">
+          <li class="work-item">
             <img
               src="./images/hw-first/photo_1.jpg"
               alt="Кодування сайтів"
@@ -134,7 +138,7 @@ d<!DOCTYPE html>
             />
             <h3 class="work-label">Десктопні додатки</h3>
           </li>
-          <li class="work-item thumb">
+          <li class="work-item">
             <img
               src="./images/hw-first/photo_2.jpg"
               alt="Наповнення контентом"
@@ -143,7 +147,7 @@ d<!DOCTYPE html>
             />
             <h3 class="work-label">Мобільні додатки</h3>
           </li>
-          <li class="work-item thumb">
+          <li class="work-item">
             <img
               src="./images/hw-first/photo_3.jpg"
               alt="Робота над дизайном"
@@ -459,8 +463,7 @@ d<!DOCTYPE html>
     <!-- page_footer_content -->
 
     <footer class="footer">
-      <di class="container footer-box">
-        <div class="footer-wrap">
+      <div class="container footer-box">
         <div class="box-logo-address">
           <a class="footer-logo" href="/">Web<span class="part-logo-footer">Studio</span></a>
           <address>
@@ -536,74 +539,78 @@ d<!DOCTYPE html>
             </li>
           </ul>
         </div>
-        </div>
-        <div class="footer-form">
+        <form class="footer-form">
           <div class="form-wrap">
-        <h3 class="footer-text">Підпишіться на розсилку</h3>
-      <form class="form" action="#">
-        <div class="form-field">
-        <input class="form-input" type="email" name="email" placeholder="E-mail">
-        </div>
+            <h3 class="footer-text">Підпишіться на розсилку</h3>
+            <input class="form-input" type="email" name="email" placeholder="E-mail" />
+          </div>
+          <button class="form-button" type="submit">
+            Підписатися
+            <svg class="form-icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-icon-telegram"></use>
+            </svg>
+          </button>
         </form>
+
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <form class="form-modal">
+              <p class="modal-text">Залиште свої дані, ми вам перетелефонуємо</p>
+              <label class="name-input"
+                >Ім'я
+                <span class="username-input">
+                  <input class="modal-input" type="text" name="name" />
+                  <svg class="modal-form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-person-black"></use>
+                  </svg>
+                </span>
+              </label>
+              <label class="name-input"
+                >Телефон
+                <span class="username-input"
+                  ><input class="modal-input" type="tel" name="tel" />
+                  <svg class="modal-form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs2.svg#icon-phone-black-18dp"></use>
+                  </svg>
+                </span>
+              </label>
+              <label class="name-input"
+                >Пошта
+                <span class="username-input"
+                  ><input class="modal-input" type="email" name="email" />
+                  <svg class="modal-form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-email-black"></use>
+                  </svg>
+                </span>
+              </label>
+              <label class="modal-coment">
+                Коментар
+                <textarea
+                  class="form-coment"
+                  name="form-coment"
+                  placeholder="Введіть текст"
+                ></textarea>
+              </label>
+              <label class="check-label">
+                <input class="checkbox visually-hidden" type="checkbox" name="policy" />
+                <span class="icon">
+                  <svg class="check-icon" width="16" height="15">
+                    <use href="./images/symbol-defs4.svg#icon-icon-check"></use>
+                  </svg>
+                </span>
+                Погоджуюся з розсилкою і приймаю <a class="modal-link" href="/">Умови договору</a>
+              </label>
+              <button class="btn-modal" type="submit">Відправити</button>
+            </form>
+            <button class="modal-close" data-modal-close>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-close-black"></use>
+              </svg>
+            </button>
+          </div>
         </div>
-        <button class="form-button" type="submit">Підписатися
-          <svg class="form-icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-icon-telegram"> </use>
-          </svg>
-        </button>
       </div>
+      <script src="./js/modal.js"></script>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <p class="modal-text">Залиште свої дані, ми вам перетелефонуємо</p>
-        <form>
-          <div class="form-name">
-<label class="name-input">Ім'я</label>
-<span class="username-input"><input class="modal-input" type="text" name="name">
-<svg class="modal-form-icon" width="12" height="12">
-  <use href="./images/symbol-defs.svg#icon-person-black"></use>
-</svg>
-</span>
-</div>
-<div class="form-name">
-<label class="name-input">Телефон</label>
-<span class="username-input"><input class="modal-input" type="tel" name="tel">
-<svg class="modal-form-icon" width="13" height="13">
-  <use href="./images/symbol-defs2.svg#icon-phone-black-18dp"></use>
-</svg>
-</span>
-</div>
-<div class="form-name">
-<label class="name-input">Пошта</label>
-<span class="username-input"><input class="modal-input" type="tel" name="tel">
-<svg class="modal-form-icon" width="15" height="12">
-  <use href="./images/symbol-defs.svg#icon-email-black"></use>
-</svg>
-</span>
-</div>
-<div class="form-name">
-<label class="modal-coment">Коментар</label>
-<textarea class="form-coment" placeholder="Введіть текст" >Введіть текст</textarea>
-</div>
-        </form>
-<div class="label" ">
-  <input type="checkbox" name="policy"/>
-  <label class="check-label">
-  <span class="icon">
-    <svg class="check-icon" width="16" height="15">
-      <use href="./images/symbol-defs4.svg#icon-icon-check"></use>
-    </svg>
-  </span>
-  Погоджуюся з розсилкою і приймаю <a class="modal-link" href="/">Умови договору</a>
-</div> 
-<button class="btn-modal" type="submit">Відправити</button>
-        <button class="modal-close" data-modal-close>
-          <svg class="modal-icon" width="18" height="18">
-            <use href="./images/symbol-defs.svg#icon-close-black"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
