--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>HW-5</title>
+    <title>HW-6</title>
   </head>
   <body>
     <!-- page_header_content -->
@@ -45,13 +45,15 @@
           <li class="nav-contacts-item">
             <a class="nav-contacts-link" href="mailto:info@devstudio.com">
               <svg class="nav-icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com</a
+                <use href="./images/sprite.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
             >
           </li>
           <li class="nav-contacts-item">
             <a class="nav-contacts-link" href="tel:info@devstudio.com">
               <svg class="nav-icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -290,7 +292,6 @@
     </main>
 
     <!-- page_footer_content -->
-
     <footer class="footer">
       <div class="container footer-box">
         <div class="box-logo-address">
@@ -368,6 +369,18 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <div class="form-wrap">
+            <h3 class="footer-text">Підпишіться на розсилку</h3>
+            <input class="form-input" type="email" name="email" placeholder="E-mail" />
+          </div>
+          <button class="form-button" type="submit">
+            Підписатися
+            <svg class="form-icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-icon-telegram"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
